--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav>
-      <h1>Graphical Reservation</h1>
+      <img class="logo-svg" src="/images/GRLOGO.svg" alt="Graphical Reservation Logo">
       <label>
         <input type="checkbox">
         <span class="menu"> <span class="hamburger"></span> </span>
