--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,35 +1,46 @@
 <div class="heroContainer">
-      <div class="bottomLayer">
-        <img class="heroOne" src="./images/TableThree.jpg">
+  <div class="bottomLayer">
+    <img class="heroOne" src="./images/TableThree.jpg">
+  </div>
+  <div class="topLayer">
+    {{#if loggedIn}}
+      <div class="search">
+        <input id="searchBar" type="text" placeholder="Find a Restaurant...">
+        <div id="searchClear" class="hidden">X</div>
+        <div id="searchBtn" class="hidden">Go</div>
+        <script src="./js/searchHandler.js"></script>
       </div>
-       <div class="topLayer">
-     {{#if loggedIn}}
-        <div class="search">
-          <input id="searchBar" type="text" placeholder="Find a Restaurant...">
-          <div id="searchClear" class="hidden">X</div>
-          <div id="searchBtn" class="hidden">Go</div>
-            <script src="./js/searchHandler.js"></script>
-        </div>
-    {{else}} 
-            <a href="/signup" class="button1">Sign Up</a>
-     {{/if}} 
+    {{else}}
+      <div class="entryLinks">
+        <a href="/signup" class="button1">Sign Up</a>
+        <p>|</p>
+        <a href="/login" class="button1">Login</a>
+      </div>
+    {{/if}}
+  </div>
+
+
+  <svg id="arrow" x="0px" y="0px" width="960px" height="560px" viewBox="0 0 960 560">
+    <g>
+      <path id="arrowPath" d="M480,344.181L268.869,131.889c-15.756-15.859-41.3-15.859-57.054,0c-15.754,15.857-15.754,41.57,0,57.431l237.632,238.937   c8.395,8.451,19.562,12.254,30.553,11.698c10.993,0.556,22.159-3.247,30.555-11.698l237.631-238.937   c15.756-15.86,15.756-41.571,0-57.431s-41.299-15.859-57.051,0L480,344.181z" />
+    </g>
+  </svg>
+
+  <card>
+    <div class="inner">
+      <h2>About:</h2>
+      <p>Our team works with restaurants to make the reservation process easy! Each location has a floor plan laid out
+        so you can choose exactly where you want to sit. Book directly through us and manage your reservation
+        through your account.</p>
     </div>
+  </card>
 
-    <card>
-      <div class="inner">
-        <h2>About:</h2>
-        <p>Our team works with restaurants to make the reservation process easy! Each location has a floor plan laid out
-          so you can choose exactly where you want to sit. Book directly through us and manage your reservation
-          through your account.</p>
-      </div>
-    </card>
-
-    <card class="right">
-      <div class="inner">
-        <h2>How to:</h2>
-        <p>Log in or create an account with us by following the link above. After logging in you're able to search for
-          participating restaurants, view their tables availible for reservation and make requests for whichever table
-          looks best!</p>
-      </div>
-    </card>
+  <card class="right">
+    <div class="inner">
+      <h2>How to:</h2>
+      <p>Log in or create an account with us by following the link above. After logging in you're able to search for
+        participating restaurants, view their tables availible for reservation and make requests for whichever table
+        looks best!</p>
+    </div>
+  </card>
 </div>
