remove menu button and change search go button

--- a/views/restaurantdetails.handlebars
+++ b/views/restaurantdetails.handlebars
@@ -7,6 +7,6 @@
     <p id="restaurant-hours">{{restaurant.hours}} Daily</p> 
     <p id="restaurant-website">{{restaurant.menu_link}}</p>
      <p id="restaurant-address">{{restaurant.address}}</p>
-    <a href="{{restaurant.menu_link}}">View Menu</a> 
+    {{!-- <a href="{{restaurant.menu_link}}">View Menu</a>  --}}
     <a class="detailsBtn" href="reserve/{{restaurant.restaurant_id}}">Reserve a Table</a>
 </div>
