--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,8 +293,15 @@ a.button1:active, button:active{
   z-index: 1;
   margin-right: 10px;
   text-align: center;
-}
+  /* vertical-align: middle; */
+  /* justify-content: center; */
+  /* align-items: center; */
 
+}
+#searchBtn p{
+  text-align: center;
+  vertical-align: middle;
+}
 /* ABOUT APP CARDS */
 
 card {
