made logo a link, reworked search bar x and go button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -286,6 +286,7 @@ a.button1:active, button:active{
   height: inherit;
   width: 15px;
   color: white;
+  opacity: .3;
   margin-left: 15px;
   margin-top: 3vh;
   font-size: 16px;
@@ -295,13 +296,14 @@ a.button1:active, button:active{
 
 #searchBtn {
   cursor: pointer;
-  height: 3vh;
+  /* height: 3vh; */
   width: 10%;
   background-color: rgba(135, 136, 135, 0.582);
   border-radius: 20px;
   z-index: 1;
   margin-right: 10px;
   text-align: center;
+  min-width:40px;
 }
 
 /* ABOUT APP CARDS */
