--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,8 @@
 <body>
   <header>
     <nav>
-      <img class="logo-svg" src="/images/GRLOGO.svg" alt="Graphical Reservation Logo">
-      <label>
+      <a href="/"> <img class="logo-svg" src="/images/GRLOGO.svg" alt="Graphical Reservation Logo" ></a>
+      <label> 
         <input type="checkbox">
         <span class="menu"> <span class="hamburger"></span> </span>
         <ul id="navItems" class="display_none">
