update readme with screenshots, give hint in search bar

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
   <div class="topLayer">
     {{#if loggedIn}}
       <div class="search">
-        <input id="searchBar" type="text" placeholder="Find a Restaurant...">
+        <input id="searchBar" type="text" placeholder="Find a Restaurant... (Try something like 'Taco')">
         <div id="searchClear" class="hidden">X</div>
         <div id="searchBtn" class="hidden">Go</div>
         <script src="./js/searchHandler.js"></script>
